# astro-ndslice

./: LICENSE  README.md  setup.cfg
astro_ndslice/: __init__.py  list.py  lists.py  offset.py  slices.py
astro_ndslice/tests/: test_list.py  test_offset.py  test_slices.py
